Fixed handling for icons repositioned from shorter rows/columns - Grid settings' hidden icon counter now updates when new files that cannot fit are created

--- a/plexos/res/components/graphs/desktop/grid_graph/grid_graph.css
+++ b/plexos/res/components/graphs/desktop/grid_graph/grid_graph.css
@@ -53,7 +53,8 @@
 }
 .ID_TASKID.grid_graph>span:nth-child(5){
     top: 64px;
-    left: 225px;
+    left: 210px;
+    width: 39px;
     color: #888888;
 }
 .ID_TASKID.grid_graph>div:nth-child(6){
